# partisia-random-beacon

./: .gitignore  README.md  asset-manifest.json  index.html
eth/: .env  deploy.ts  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
eth/contracts/: Raffle.sol
frontend/: .env  config-overrides.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx  AppState.ts  ConnectedWallet.ts  Home.tsx
frontend/src/abi/: Raffle.json
frontend/src/components/: useLoading.tsx  useRaffleData.tsx
frontend/src/components/contract/: Index.tsx  Nft.tsx  Rng.tsx  UserList.tsx  Whitelist.tsx
frontend/src/components/contract/Raffle/: Finish.tsx  Index.tsx  NftList.tsx  Start.tsx  Whitelist.tsx
frontend/src/components/loading/: Index.tsx  loading.css
frontend/src/components/wallet/eth/: Accounts.tsx  AccountsComponent.tsx  Card.tsx  Chain.tsx  ConnectWithSelect.tsx  MetamaskCard.tsx  SingleAccount.tsx  Status.tsx
frontend/src/components/wallet/partisia/: Admin.tsx  Connect.ts  Index.tsx  Metamask.tsx  Mpc.tsx  Private.tsx
frontend/src/connectors/: metamask.ts
frontend/src/contract/: Raffle.ts  RandomApi.ts  RandomGenerated.ts
frontend/src/keys/: pvk.json
frontend/src/utils/: chain.ts  utils.ts
program/: Cargo.toml
program/src/: lib.rs  philox.rs  squaresrng.rs  threefry.rs  zk_compute.rs
static/css/: main.bf454e3c.css
static/js/: 612.e18009ef.chunk.js  main.21321abd.js  main.49614670.js  main.6717ac5e.js  main.77fad08f.js  main.8fd80510.js  main.b19be65e.js  main.d5913757.js  main.d5913757.js.LICENSE.txt
test/: partisia.txt.enc
